# fswreck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: manifest-format.md
scripts/: smoke.sh
src/: catalog.rs  clean.rs  cli.rs  deep.rs  exotic.rs  json.rs  lib.rs  main.rs  manifest.rs  names.rs  pathcodec.rs  perms.rs  plan.rs  rng.rs  spec.rs  symlinks.rs  unicode.rs  verify.rs  writer.rs
tests/: cli.rs
